--- a/style/general.css
+++ b/style/general.css
@@ -1,12 +1,12 @@
 :root{
-    --desc-color : grey;
+    --desc-color : #6a6a6a;
 
-    --h2-font-size : clamp(9px,1.7vw,28px);
+    /* --h2-font-size : clamp(9px,1.7vw,28px);
     --h3-font-size : clamp(6px,1.1vw,14px);
     --p-font-size : clamp(7px,1.1vw,16px);
     --summary-font-size : clamp(5px,1.0vw,14px);
     --header-nav-font-size : var(--h3-font-size);
-    --d8-address-font-size : clamp(4px,1.0vw,12px);
+    --d8-address-font-size : clamp(4px,1.0vw,12px); */
 
     --h2-font-size : 28px;
     --h3-font-size : 14px;
@@ -112,8 +112,13 @@ section:nth-child(7){
     background-color: rgb(15, 14, 14);
 }
 
+section:nth-child(9){
+    background-color: rgb(217, 217, 217);
+}
+
 form{
-    width: 26vw;
+    /* width: 26vw; */
+    width: 500px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 1vw;
@@ -125,13 +130,13 @@ form input[type=text]{
 }
 
 form textarea{
-    height:6vw;
-    min-height:6vw;
+    height:100px;
+    min-height:100px;
     grid-column: span 3;
 }
 
 form input[type=text], textarea{
-    font-size: var(--desc-font-size);
+    font-size: var(--p-font-size);
     padding: 0.5vw;
     width: 100%;
     height: 100%;
@@ -192,6 +197,14 @@ section{
     margin-bottom: 2vw;
 }
 
+section:nth-child(7){
+    margin-top: 15vw;
+}
+
+section:nth-child(9){
+    margin-top: 15vw;
+}
+
 .content{
     width: 100%;
 }
@@ -223,7 +236,6 @@ form textarea{
 }
 
 form input[type=text], textarea{
-    
     font-size:var(--d8-address-font-size);
     padding: 2vw;
     /* width: 100%; */
@@ -238,7 +250,6 @@ figcaption p{
 footer{
     width: 100%;
 }
-
 
 /* DIVS */
 
@@ -279,7 +290,16 @@ footer{
 }
 
 .div3 h2 {
+    margin: 0;
+    text-align: center;
     width: 100%;
+}
+
+.div3 p{
+    text-align: center;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
+    line-height: 1.5;
 }
 
 .div3 figure{
@@ -294,7 +314,7 @@ footer{
 
 /* DIV 4 */
 .div4, .div5{
-    row-gap: 2.5vw;
+    row-gap: 4vw;
 }
 
 .div4-grid{
@@ -302,10 +322,11 @@ footer{
     display: flex;
     flex-direction: column;
     place-items: center;
-    width: 80vw;
+    /* width: 80vw; */
+    width: 100%;
     height: 100%;
     column-gap: 0;
-    row-gap: 4vw; 
+    row-gap: 10vw; 
 }
 
 /* display : flex */
@@ -318,7 +339,7 @@ footer{
 }
 
 .div4 a{
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .div4-grid-feature i{
@@ -328,7 +349,6 @@ footer{
 /* Div 5 */
 
 .div5-grid{
-    /* background-color: red; */
     display: flex;
     flex-direction: column;
     padding: 0 0;
@@ -346,6 +366,7 @@ footer{
     height: 100%;
     margin-bottom: 0vw;
     display: flex;
+    border-radius: 2vw;
 }
 
 /* Div 6 */
@@ -359,6 +380,11 @@ footer{
     row-gap: 6vw;
 }
 
+.div6 h{
+    text-align: left;
+    width: 100%;
+}
+
 .div6 p{
     width: 100%;
 }
@@ -369,7 +395,7 @@ footer{
     display: flex;
     height: fit-content;
     flex-direction: column;
-    row-gap: 3vw;
+    row-gap: 4vw;
 }
 
 .div7 h2, .div7 p{
@@ -442,9 +468,15 @@ footer{
 
 .footer-contents-desc{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     row-gap: 0.6vw;
     column-gap: 3vw;
+    text-wrap: nowrap;
+}
+
+.footer-contents-desc a{
+    text-wrap: nowrap;
 }
 
 .footer-logo{
@@ -466,5 +498,6 @@ footer{
     grid-template-columns: 1fr;
 }
 } 
+
 
 
